src/partials/_comments.scss
@use "../utils/colors.scss" as *;
@use "../utils/mixins/mixins.scss" as *;
@use "../utils/vars.scss" as *;

$border-style: 2px solid var(--secondary-color);

@mixin comments {
  #comments {
    .heading {
      @include rename("h4", "Complaints");
      h4:before {
        font-size: 1.5rem;
      }
    }

    .report a img {
      content: url("https://a.l3n.co/i/my9ZQZ.png");
    }

    .comments-table {
      border: none;

      tbody {
        display: flex;
        flex-direction: column;

        tr {
          display: flex;
          margin: 10px 0 10px 0;
          @media only screen and (max-width: $mobile) {
            flex-direction: column;
            td {
              border-radius: 1rem !important;

              &:first-child {
                align-self: center;
                width: 100%;
                border-top: $border-style !important;
                border-left: $border-style !important;
                border-right: $border-style !important;
                border-bottom-left-radius: 0 !important;
                border-bottom-right-radius: 0 !important;

                &:after {
                  border-radius: 1rem 1rem 0 0 !important;
                }
              }
              &:last-child {
                border-left: $border-style !important;
                border-right: $border-style !important;
                border-bottom: $border-style !important;
                border-top-left-radius: 0 !important;
                border-top-right-radius: 0 !important;
                &:after {
                  border-radius: 0 0 1rem 1rem !important;
                }
              }
            }
          }

          &:hover {
            td {
              position: relative;
              &:after {
                content: "";
                position: absolute;
                background-color: var(--extra-color);
                z-index: -1;
                inset: 0;
                opacity: 0.3;
              }

              &:first-child:after {
                border-radius: 1rem 0 0 1rem;
              }
              &:last-child:after {
                border-radius: 0 1rem 1rem 0;
              }
            }
          }

          &:first-child {
            td {
              &:first-child {
                p {
                  color: yellow;
                  animation: first-name-anim 400ms ease-in-out infinite
                    alternate both;
                  @keyframes first-name-anim {
                    0% {
                      transform: rotateZ(-10deg) scaleX(1);
                    }

                    100% {
                      transform: rotateZ(10deg) scaleX(1.5);
                    }
                  }
                }
                img:not(.icon) {
                  animation: first-comment-profile-photo-anim 0.4s ease-in-out
                    infinite alternate both;
                  @keyframes first-comment-profile-photo-anim {
                    0% {
                      transform: scale(0.8) skewY(0deg) rotateZ(10deg)
                        rotateY(-10deg) perspective(1000px);
                    }

                    100% {
                      transform: scale(0.9) skewY(0deg) rotateZ(-10deg)
                        rotateY(-10deg) perspective(1000px);
                    }
                  }
                  perspective: 1000px;
                  box-shadow: var(--secondary-color) 0 0 20px 5px;
                  transition: all 200ms ease;

                  &:hover {
                    filter: invert(420%) sepia(69420%) saturate(1000%)
                      hue-rotate(320deg) brightness(100%) contrast(100%);
                    box-shadow: 0 0 30px 10px rgb(0 255 0);
                  }
                }
              }

              &:last-child > p:first-child {
                color: var(--primary-color);
                text-shadow: 0 0 5px var(--secondary-color),
                  0 0 10px var(--secondary-color),
                  -20px 0 20px var(--extra-color),
                  10px 0 20px var(--primary-color);
              }
            }
          }

          td {
            border: none;
            background: transparent;

            &:after {
              content: "";
              transition: background-color 300ms ease;
            }

            &:nth-child(2) > p:nth-child(2):first-letter {
              text-transform: capitalize;
            }

            &:first-child {
              position: relative;
              border-radius: 1rem 0 0 1rem;
              border-top: $border-style;
              border-left: $border-style;
              border-bottom: $border-style;

              p {
                font-family: "Beyonders", sans-serif;
                font-size: clamp(0.5rem, 1.5svw, 1rem);
                z-index: 1;
                position: relative;
                color: var(--accent-color);
                text-shadow: var(--text-shadow);
                transition: all 200ms ease;
                animation: name-anim 200ms ease-in-out infinite alternate both;
                @keyframes name-anim {
                  0% {
                    transform: rotateZ(-15deg);
                  }
                  100% {
                    transform: rotateZ(15deg);
                  }
                }
              }

              img:not(.icon) {
                width: 100%;
                height: 100%;
                object-fit: cover;
                border-radius: 10px;
                animation: comment-profile-photo-anim 200ms ease-in-out infinite
                  alternate both;
                @keyframes comment-profile-photo-anim {
                  0% {
                    transform: scale(0.8);
                  }
                  100% {
                    transform: scale(0.9);
                  }
                }

                border: 2px solid var(--extra-color);
                box-shadow: 5px 5px 0 0 var(--secondary-color);
                transition: all 200ms ease;

                &:hover {
                  box-shadow: var(--title-shadow);
                }
              }
            }
            &:last-child {
              border-radius: 0 1rem 1rem 0;
              border-top: $border-style;
              border-right: $border-style;
              border-bottom: $border-style;
              flex: 1;
              .ago {
                color: var(--accent-color);
              }
            }
          }
        }
      }

      .comment-replies {
        border: 1px solid var(--extra-color);
        border-radius: 1rem;

        .comment-reply {
          color: var(--accent-color);

          p small a b {
            font-family: "Beyonders", sans-serif;
            text-shadow: var(--text-shadow);
            font-size: 0.5em;
          }

          &:not(:first-child) {
            border-top: 1px solid var(--secondary-color);
          }

          p:not(:last-child):first-letter {
            text-transform: capitalize;
          }
        }
      }
    }
  }
}

